cfg/iptables-saved
# Generated by iptables-save v1.6.0 on Tue Nov  2 00:02:25 2021
*filter
:INPUT ACCEPT [379450:43676175]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [379185:43598179]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -i tun4 -j ACCEPT
-A FORWARD -s 10.1.0.0/24 -j ACCEPT
-A FORWARD -d 10.1.0.0/24 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Tue Nov  2 00:02:25 2021
# Generated by iptables-save v1.6.0 on Tue Nov  2 00:02:25 2021
*nat
:PREROUTING ACCEPT [44:2930]
:INPUT ACCEPT [1:78]
:OUTPUT ACCEPT [77:8699]
:POSTROUTING ACCEPT [77:8699]
:DOCKER - [0:0]
-A POSTROUTING -s 10.1.0.0/24 -o enp0s31f6 -j MASQUERADE
COMMIT
# Completed on Tue Nov  2 00:02:25 2021
